force-app/main/default/objects/Tax_Calculations__c/Tax_Calculations__c.object-meta.xml
<CustomObject>
    <label>Tax Calculations</label>
    <nameField>
        <label>Tax Calculations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>