force-app/main/default/objects/Tax_Calculations__c/fields/KYC__c.field-meta.xml
<CustomField>
    <fullName>KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Tax Calculations</relationshipLabel>
    <relationshipName>Tax_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>