force-app/main/default/objects/Tax_Calculations__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>