force-app/main/default/objects/Tax_Calculations__c/fields/Total_Amount_Paid_Rs__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid_Rs__c</fullName>
    <label>Total Amount Paid Rs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>