force-app/main/default/objects/Tax_Calculations__c/fields/Total_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Due__c</fullName>
    <label>Total Tax Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>